# SPHNJ

./: CMakeLists.txt  README.md
cases/beam_dam/: check.txt  particle_generate.cpp
cases/beam_dam/config/: input.ini
cases/beam_vibrate/: CMakeLists.txt  check.txt  particle_generate.cpp
cases/beam_vibrate/config/: input.ini
cases/circle_entry/: particle_generate.cpp
cases/circle_entry/config/: input.ini
cases/dam_break/: CMakeLists.txt  particle_generate.cpp
cases/dam_break/config/: input.ini
cases/water_tank/: check.txt  particle_generate.cpp
cases/water_tank/config/: input.ini
cases/wedge_entry/: check.txt  particle_generate.cpp
cases/wedge_entry/config/: input.ini
config/: input.ini
include/: calculation.cuh  cell.cuh  constant.h  convert.h  cuda_macro.cuh  data_pointer.cuh  domain.h  function.cuh  host_data.cuh  kernel.h  memory_copy.cuh  output.cuh  parameter.h  particle.cuh  physics.h  probe.h  properties.h  sim.cuh  sim_time.h  types.h
src/: calculation.cu  calculation.cuhl  device_fluid.cul  domain.cpp  fluid.cu  kernel.cpp  main.cu  memory_copy.cu  output.cu  pair.cu  parameter.cpp  particle.cu  physics.cpp  probe.cu  properties.cpp  sim.cu  sim_time.cpp  solid.cu  sort.cu  virt.cu
